krepe/testdata/packages/sample_pkg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
spec:
  rules:
    - host: my-app.example.com
      http:
        paths:
          - backend:
              service:
                name: my-app-service
                port:
                  number: 80
            path: /
            pathType: Prefix
