krepe/testdata/packages/sample_pkg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: my-app
  type: LoadBalancer
